--- a/forgot.html
+++ b/forgot.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/my-login.css">
 
-<link rel="icon" type="image/x-icon" class="rounded" href="img/favicon.ico"/>
+<link rel="icon" type="image/x-icon" class="rounded" href="images/favicon.ico"/>
 
 </head>
 <body class="my-login-page">
@@ -17,7 +17,7 @@
 			<div class="row justify-content-md-center align-items-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="./img/ads.png" class="logo-ads">
+						<img src="images/ads.png" class="logo-ads">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
