--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/my-login.css">
 
-<link rel="icon" type="image/x-icon" class="rounded" href="img/favicon.ico"/>
+<link rel="icon" type="image/x-icon" class="rounded" href="images/favicon.ico"/>
 
   
 </head>
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-site">
   <a class="navbar-brand" href="home.html">
-    <img src="./img/ads.png" class="logo-ads">
+    <img src="images/ads.png" class="logo-ads">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
