--- a/forgot.html
+++ b/forgot.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Ma page de connexion &mdash; page</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/my-login.css">
+	<link rel="stylesheet" type="text/css" href="static/css/my-login.css">
 
-<link rel="icon" type="image/x-icon" class="rounded" href="images/favicon.ico"/>
+<link rel="icon" type="image/x-icon" class="rounded" href="static/images/favicon.ico"/>
 
 </head>
 <body class="my-login-page">
@@ -17,7 +17,7 @@
 			<div class="row justify-content-md-center align-items-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="images/ads.png" class="logo-ads">
+						<img src="static/images/ads.png" class="logo-ads">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
@@ -54,6 +54,6 @@
 	</section>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="js/my-login.js"></script>
+	<script src="static/js/my-login.js"></script>
 </body>
 </html>
