--- a/forgot.html
+++ b/forgot.html
@@ -17,7 +17,7 @@
 			<div class="row justify-content-md-center align-items-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="static/images/ads.png" class="logo-ads">
+						<img src="static/images/logo.png">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
