--- a/retrait.html
+++ b/retrait.html
@@ -103,41 +103,57 @@
 
     <div class="demo-ribbon"></div>
     <main  role="main" class="mdl-layout__content content__container">
-        <div class="demo-container mdl-color--grey-100 spacer">
+        <div class="demo-container mdl-color--grey-100">
           <div class="demo-content mdl-color--white mdl-shadow--2dp content mdl-color-text--grey-800 mdl-cell mdl-cell--12-col">
             <div class="mdl-card__content">
+                <h4 class="mdl-typography--text-center">Retirer de l'argent</h4>
                 <div class="mdl-grid mdl-typography--text-center">
+                  
                   <div class="mdl-cell mdl-cell--4-col">
-                    <h5 class="h5">Solde Disponible</h5>
-                    <p class="lead">$50.00</p>
+                    <a class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast" href="transfert.html"><i class="material-icons">money</i></a>
+                    <p>Airtel Money</p>
                   </div>
-                  <div class="mdl-layout-spacer"></div>
+
                   <div class="mdl-cell mdl-cell--4-col">
-                    <img src="static/images/usr.png" class="usr-icon">
-                    <h5 class="h4">Manageur Jean</h5>
+                    <a class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast" href="transfert.html"><i class="material-icons">money</i></a>
+                    <p>Orange Money</p>
                   </div>
+
+                  <div class="mdl-cell mdl-cell--4-col">
+                    <a class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast" href="transfert.html"><i class="material-icons">money</i></a>
+                    <p>M-PESA</p>
+                  </div>
+
+                  <div class="mdl-cell mdl-cell--4-col">
+                    <a class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast" href="transfert.html"><i class="material-icons">money</i></a>
+                    <p>Perfect Money</p>
+                  </div>
+
+                  <div class="mdl-cell mdl-cell--4-col">
+                    <a class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast" href="transfert.html"><i class="material-icons">money</i></a>
+                    <p>AfriMoney</p>
+                  </div>
+
+                  
                 </div>
             </div>
 
             <div class="mdl-card__actions mdl-card--border mdl-typography--text-center">
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="#"><i class="material-icons">money</i>Transfert</a>
-
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="retrait.html"><i class="material-icons">money</i>Retrait</a>
-
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="depot.html"><i class="material-icons">add</i>Ajouter de L'argent</a>
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="home.html"><i class="material-icons">home</i>Accueil</a>
             </div>
 
           </div>
 
         </div>
 
-        <footer class="demo-footer mdl-mini-footer">
+
+        <footer class="demo-footer mdl-mini-footer" style="margin-top: 50px;">
             <div class="mdl-mini-footer--left-section">
                 <ul class="mdl-mini-footer--link-list">
-                    <li><a href="#">À propos</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Confidentialité</a></li>
-                    <li><a href="#">Termes</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
                 </ul>
             </div>
         </footer>
