--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
               <div class="demo-crumbs mdl-color-text--grey-500">
                 Tableau de Bord
               </div>
-              <div class="mdl-grid mdl-typography--text-center">
+              <div class="mdl-grid mdl-typography--text-center justify-content-between">
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--3-tablet mdl-cell--2-phone">
                   <p class="h6">Solde Disponible</p>
                   <p class="demo-crumbs">$50.00</p>
@@ -124,14 +124,14 @@
           </div>
 
           <div class="mdl-card__actions mdl-card--border mdl-typography--text-center">
-              <a class="mdl-button btn mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="#">Transfert</a>
+              <a class="mdl-button btns mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="#">Transfert</a>
 
-              <a class="mdl-button btn mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="retrait.html"><i class="material-icons">money</i>Retrait</a>
+              <a class="mdl-button btns mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="retrait.html"><i class="material-icons">money</i>Retrait</a>
               
 
               <div class="line"></div>
 
-              <a class="mdl-button btn mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="depot.html">Ajouter de L'argent</a>
+              <a class="mdl-button btns mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-color--blue mdl-color-text--white" href="depot.html">Ajouter de L'argent</a>
           </div>
 
 
