--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="row justify-content-md-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="static/images/logo.png" alt="logo">
+						<img src="static/images/bg.png" alt="logo">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
