--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="mdl-layout-spacer"></div>
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--3-tablet mdl-cell--2-phone">
-                  <img src="static/images/usr.png">
+                  <img src="static/images/person.jpg">
                   <p class="demo-crumbs">Manageur Jean</p>
                 </div>
               </div>
